# gotta-bike-fast

./: .dockerignore  .gitignore  BUILD.md  CLAUDE.md  Caddyfile  Dockerfile  README.md  export_presets.cfg  icon.svg.import  project.godot
.github/workflows/: build.yml
branding/: .gitignore  README.md  icon.icns
bridge/: .gitignore  README.md  gbf-bridge.spec  pyproject.toml  run_bridge.py
bridge/gbf_bridge/: __init__.py  __main__.py  protocol.py  sensors.py  server.py
bridge/tests/: test_protocol.py  test_trainer.py
packaging/windows/: installer.iss
scenes/: dev_menu.tscn  hud.tscn  join.tscn  lobby.tscn  login.tscn  main.tscn  main_menu.tscn  my_games.tscn  results.tscn  ride.tscn  riders.tscn  sensors.tscn  settings.tscn
scripts/: graphics_settings.gd  graphics_settings.gd.uid  main.gd  main.gd.uid
scripts/network/: api_client.gd  api_client.gd.uid  dev_settings.gd  dev_settings.gd.uid  game_session.gd  game_session.gd.uid  sensor_bridge.gd  sensor_bridge.gd.uid  world_client.gd  world_client.gd.uid
scripts/physics/: bike_spec.gd  bike_spec.gd.uid  cycling.gd  cycling.gd.uid  physics_kit.gd  physics_kit.gd.uid  ride_settings.gd  ride_settings.gd.uid  rider_profile.gd  rider_profile.gd.uid  tires_spec.gd  tires_spec.gd.uid  wheels_spec.gd  wheels_spec.gd.uid
scripts/ui/: countdown_picker.gd  countdown_picker.gd.uid  course_picker.gd  course_picker.gd.uid  dev_menu.gd  dev_menu.gd.uid  draggable_panel.gd  draggable_panel.gd.uid  game_speed_picker.gd  game_speed_picker.gd.uid  hud.gd  hud.gd.uid  join.gd  join.gd.uid  lobby.gd  lobby.gd.uid  login.gd  (+15 more)
(+16 files in other folders)
