[project]
name = "gbf-bridge"
version = "0.1.0"
description = "Gotta Bike Fast — BLE sensor bridge (bleak → localhost WebSocket)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.22",
    "websockets>=12",
]

[project.scripts]
gbf-bridge = "gbf_bridge.__main__:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gbf_bridge"]
